home page and some edit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   google_fonts: ^2.0.0
   material: ^1.0.0+2
   shared_preferences: ^2.0.15
+  image_picker: ^0.8.6
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
