--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   image_picker: ^0.8.6
   flutter_svg: ^1.0.3
   font_awesome_flutter: ^10.3.0
+  flutter_local_notifications: ^12.0.4
+  firebase_messaging: ^14.2.1
 
 dev_dependencies:
   flutter_test:
